@startuml
!theme plain
skinparam linetype ortho
skinparam backgroundColor #FEFEFE

' Prefer wide layout (wider than tall)
left to right direction
skinparam nodesep 28
skinparam ranksep 40

title Konceptuální datový model – ER diagram

' Enums
enum attribute_type {
  ENUM
  INTEGER
  DECIMAL
  BOOLEAN
}

enum condition_operator {
  EQ
  BETWEEN
}

enum request_status {
  NEW
  IN_PROGRESS
  OFFER_SENT
  CLOSED
}

' Analytics (DB: VARCHAR + CHECK; enums = allowed values)
enum analytics_event_type {
  CONFIGURATOR_OPEN
  CONFIGURATION_CHANGE
  REQUEST_FORM_OPEN
  REQUEST_SUBMITTED
}

' User & Auth
entity "user" as user {
  * id : UUID <<PK>>
  --
  email : TEXT
  first_name : TEXT
  surname : TEXT
  password : TEXT
  check_sum : TEXT
  search_vector : TEXT <<generated>>
  notification_email : TEXT
  created_at : TIMESTAMPTZ
  modified_at : TIMESTAMPTZ
}

entity "user_refresh_token" as user_refresh_token {
  * jwt_id : UUID <<PK>>
  --
  user_id : UUID <<FK>>
  created_at : TIMESTAMPTZ
  expires_at : TIMESTAMPTZ
}

' Product modeling
entity "product_model" as product_model {
  * id : UUID <<PK>>
  --
  user_id : UUID <<FK>>
  name : TEXT
  description : TEXT
  price : NUMERIC
  currency : TEXT
  is_active : BOOLEAN
  model_3d_url : TEXT
  model_3d_effects : JSONB
  url : TEXT
  is_published : BOOLEAN
  created_at : TIMESTAMPTZ
  modified_at : TIMESTAMPTZ
}

entity "product_model_configurator_preferences" as configurator_prefs {
  * product_model_id : UUID <<PK>> <<FK>>
  --
  zoom_distance_default : DECIMAL
  zoom_distance_embed : DECIMAL
  embed_show_product_name : BOOLEAN
  embed_show_description : BOOLEAN
  embed_show_components : BOOLEAN
  background_preset : VARCHAR(32)
  created_at : TIMESTAMPTZ
  modified_at : TIMESTAMPTZ
}

entity "component_definition" as component_definition {
  * id : UUID <<PK>>
  --
  product_model_id : UUID <<FK>>
  code : TEXT
  label : TEXT
  description : TEXT
  sort_order : INTEGER
  image_z_index : INTEGER
  created_at : TIMESTAMPTZ
  modified_at : TIMESTAMPTZ
}

entity "attribute_definition" as attribute_definition {
  * id : UUID <<PK>>
  --
  component_id : UUID <<FK>>
  code : TEXT
  label : TEXT
  type : attribute_type
  is_required : BOOLEAN
  min_int : INTEGER
  max_int : INTEGER
  min_decimal : NUMERIC
  max_decimal : NUMERIC
  default_int : INTEGER
  default_decimal : NUMERIC
  unit : TEXT
  sort_order : INTEGER
  created_at : TIMESTAMPTZ
  modified_at : TIMESTAMPTZ
}

entity "attribute_option" as attribute_option {
  * id : UUID <<PK>>
  --
  attribute_id : UUID <<FK>>
  value : TEXT
  label : TEXT
  image_url : TEXT
  sort_order : INTEGER
  created_at : TIMESTAMPTZ
  modified_at : TIMESTAMPTZ
}

entity "attribute_pricing_rule" as attribute_pricing_rule {
  * id : UUID <<PK>>
  --
  product_model_id : UUID <<FK>>
  component_id : UUID <<FK>>
  attribute_code : TEXT
  operator : condition_operator
  value : TEXT
  to_value : TEXT
  price : INTEGER
  created_at : TIMESTAMPTZ
  modified_at : TIMESTAMPTZ
}

entity "customer_request" as customer_request {
  * id : UUID <<PK>>
  --
  status : request_status
  customer_name : TEXT
  customer_email : TEXT
  customer_phone : TEXT
  customer_note : TEXT
  product_model_id : UUID <<FK>>
  product_model_name : TEXT
  product_model_description : TEXT
  currency : TEXT
  total_price : INTEGER
  configuration_json : JSONB
  pricing_breakdown_json : JSONB
  snapshot_image_base64 : TEXT
  created_at : TIMESTAMPTZ
  modified_at : TIMESTAMPTZ
}

' Configurator / embed analytics (append-only events; dedupe indexes in DB)
entity "configurator_analytics_event" as configurator_analytics_event {
  * id : UUID <<PK>>
  --
  occurred_at : TIMESTAMPTZ
  event_type : analytics_event_type
  session_id : VARCHAR(128)
  product_model_id : UUID <<FK>>
  embed_owner_user_id : UUID <<FK>>
  embed_product_url : VARCHAR(512)
  surface : analytics_surface
  customer_request_id : UUID <<FK>>
  occurred_on_utc : DATE <<generated>>
}

' Relationships (conceptual schema – no relation names)
user ||--o{ user_refresh_token
user ||--o{ product_model
user ||--o{ configurator_analytics_event

product_model ||--o| configurator_prefs
product_model ||--o{ component_definition
product_model ||--o{ attribute_pricing_rule
product_model ||--o{ customer_request
product_model ||--o{ configurator_analytics_event

customer_request ||--o| configurator_analytics_event

component_definition ||--o{ attribute_definition
attribute_definition ||--o{ attribute_option

component_definition |o--o{ attribute_pricing_rule
@enduml